# cpp-concurrency

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.cpp
inc/concurrency/: blocking_container.hpp  blocking_retrieving_policy.hpp  future.hpp  promise.hpp  value_or_exception.hpp
